--- a/aten/src/ATen/nn.yaml
+++ b/aten/src/ATen/nn.yaml
@@ -1,60 +1,60 @@
 # Loss functions
 
-- name: binary_cross_entropy(Tensor self, Tensor target, Tensor weight={}, bool size_average=true, bool reduce=true)
+- name: binary_cross_entropy(Tensor self, Tensor target, Tensor weight={}, int64_t reduction=Reduction::ElementwiseMean)
   cname: BCECriterion
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
 
-- name: kl_div(Tensor self, Tensor target, bool size_average=true, bool reduce=true)
+- name: kl_div(Tensor self, Tensor target, int64_t reduction=Reduction::ElementwiseMean)
   cname: DistKLDivCriterion
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
 
-- name: l1_loss(Tensor self, Tensor target, bool size_average=true, bool reduce=True)
+- name: l1_loss(Tensor self, Tensor target, int64_t reduction=Reduction::ElementwiseMean)
   cname: AbsCriterion
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
 
-- name: mse_loss(Tensor self, Tensor target, bool size_average=true, bool reduce=true)
+- name: mse_loss(Tensor self, Tensor target, int64_t reduction=Reduction::ElementwiseMean)
   cname: MSECriterion
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
 
-- name: multi_margin_loss(Tensor self, LongTensor target, Scalar p=1, Scalar margin=1, Tensor weight={}, bool size_average=true, bool reduce=true)
+- name: multi_margin_loss(Tensor self, LongTensor target, Scalar p=1, Scalar margin=1, Tensor weight={}, int64_t reduction=Reduction::ElementwiseMean)
   cname: MultiMarginCriterion
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
 
-- name: multilabel_margin_loss(Tensor self, LongTensor target, bool size_average=true, bool reduce=true)
+- name: multilabel_margin_loss(Tensor self, LongTensor target, int64_t reduction=Reduction::ElementwiseMean)
   cname: MultiLabelMarginCriterion
   buffers: [is_target]
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
     is_target: target_->isScalar()
 
-- name: nll_loss(Tensor self, LongTensor target, Tensor weight={}, bool size_average=true, int64_t ignore_index=-100, bool reduce=True)
+- name: nll_loss(Tensor self, LongTensor target, Tensor weight={}, int64_t reduction=Reduction::ElementwiseMean, int64_t ignore_index=-100)
   cname: ClassNLLCriterion
   buffers: [total_weight]
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
     total_weight: 'true'
 
-- name: nll_loss2d(Tensor self, LongTensor target, Tensor weight={}, bool size_average=true, int64_t ignore_index=-100, bool reduce=True)
+- name: nll_loss2d(Tensor self, LongTensor target, Tensor weight={}, int64_t reduction=Reduction::ElementwiseMean, int64_t ignore_index=-100)
   cname: SpatialClassNLLCriterion
   buffers: [total_weight]
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
     total_weight: 'true'
 
-- name: smooth_l1_loss(Tensor self, Tensor target, bool size_average=true, bool reduce=true)
+- name: smooth_l1_loss(Tensor self, Tensor target, int64_t reduction=Reduction::ElementwiseMean)
   cname: SmoothL1Criterion
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
 
-- name: soft_margin_loss(Tensor self, Tensor target, bool size_average=true, bool reduce=true)
+- name: soft_margin_loss(Tensor self, Tensor target, int64_t reduction=Reduction::ElementwiseMean)
   cname: SoftMarginCriterion
   scalar_check:
-    output: reduce || self_->isScalar()
+    output: reduction != Reduction::None || self_->isScalar()
 
 # Activation functions
 
