--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -329,9 +329,9 @@
 - name: i1(Tensor self)
   self: grad * (i0(self) - i1(self) / self)
 
-#- name: iv(Scalar v, Tensor self)
-#  self: grad * (iv(v,self) * v / self + iv(v+1, self))
-#  v: not_implemented("iv")
+- name: iv(Tensor v, Tensor self)
+  self: grad * (iv(v,self) * v / self + iv(v+1, self))
+  v: not_implemented("iv")
 
 - name: index_add_(Tensor self, int64_t dim, Tensor index, Tensor source)
   self: grad
