--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -885,8 +885,8 @@
 - name: upsample_trilinear3d_forward(Tensor self, IntList output_size, bool align_corners)
   self: upsample_trilinear3d_backward(grad, output_size, self.sizes(), align_corners)
 
-- name: upsample_nearest1d_forward(Tensor self, IntList output_size, bool align_corners) 
-  self: upsample_nearest1d_backward(grad, output_size, self.sizes(), align_corners)
+- name: upsample_nearest1d_forward(Tensor self, IntList output_size) 
+  self: upsample_nearest1d_backward(grad, output_size, self.sizes())
 
 - name: upsample_nearest2d_forward(Tensor self, int64_t scale_factor)
   self: upsample_nearest2d_backward(grad, self, scale_factor)
@@ -1125,8 +1125,8 @@
 - name: upsample_trilinear3d_backward(Tensor grad_output, IntList output_size, IntList input_size, bool align_corners)
   grad_output: upsample_trilinear3d(grad, output_size, align_corners)
 
-- name: upsample_nearest1d_backward(Tensor grad_output, IntList output_size, IntList input_size, bool align_corners) 
-  grad_output: upsample_nearest1d(grad, output_size, align_corners)
+- name: upsample_nearest1d_backward(Tensor grad_output, IntList output_size, IntList input_size) 
+  grad_output: upsample_nearest1d(grad, output_size)
 
 - name: upsample_nearest2d_backward(Tensor grad_output, Tensor self, int64_t scale_factor)
   grad_output: upsample_nearest2d(grad, scale_factor)
