--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -888,8 +888,8 @@
 - name: upsample_nearest1d_forward(Tensor self, IntList output_size) 
   self: upsample_nearest1d_backward(grad, output_size, self.sizes())
 
-- name: upsample_nearest2d_forward(Tensor self, int64_t scale_factor)
-  self: upsample_nearest2d_backward(grad, self, scale_factor)
+- name: upsample_nearest2d_forward(Tensor self, IntList output_size)
+  self: upsample_nearest2d_backward(grad, output_size, self.sizes())
 
 - name: upsample_nearest3d_forward(Tensor self, int64_t scale_factor)
   self: upsample_nearest3d_backward(grad, self, scale_factor)
@@ -1128,9 +1128,8 @@
 - name: upsample_nearest1d_backward(Tensor grad_output, IntList output_size, IntList input_size) 
   grad_output: upsample_nearest1d(grad, output_size)
 
-- name: upsample_nearest2d_backward(Tensor grad_output, Tensor self, int64_t scale_factor)
-  grad_output: upsample_nearest2d(grad, scale_factor)
-  self: zeros_like(grad)
+- name: upsample_nearest2d_backward(Tensor grad_output, IntList output_size, IntList input_size)
+  grad_output: upsample_nearest2d(grad, output_size)
 
 - name: upsample_nearest3d_backward(Tensor grad_output, Tensor self, int64_t scale_factor)
   grad_output: upsample_nearest3d(grad, scale_factor)
