--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1445,6 +1445,8 @@
     CPU: flip_cpu
     CUDA: flip_cuda
 
+- func: rot90(Tensor self, int64_t k, IntList dims) -> Tensor
+
 - func: _trilinear(Tensor i1, Tensor i2, Tensor i3, IntList expand1, IntList expand2, IntList expand3, IntList sumdim, int64_t unroll_dim=1) -> Tensor
   variants: function
 
