--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -342,7 +342,7 @@
   self: -at::mm(output.t(), at::mm(grad, output.t()))
 
 - name: kthvalue(Tensor self, int64_t k, int64_t dim, bool keepdim)
-  self: select_backward(grad, dim, indices, self.sizes(), keepdim)
+  self: index_select_backward(grad, dim, indices, self.sizes(), keepdim)
 
 - name: le_(Tensor self, Scalar other)
   self: zeros_like(self)
@@ -407,10 +407,10 @@
   self: zeros_like(self).masked_scatter_(mask, grad)
 
 - name: max(Tensor self, int64_t dim, bool keepdim)
-  self: select_backward(grad, dim, max_indices, self.sizes(), keepdim)
+  self: index_select_backward(grad, dim, max_indices, self.sizes(), keepdim)
 
 - name: max(Tensor self)
-  self: select_backward_scalar(grad, self, result)
+  self: select_equals_backward(grad, self, result)
 
 - name: max(Tensor self, Tensor other)
   self: grad.clone().masked_fill_(self <= other, 0)
@@ -423,16 +423,30 @@
   self: grad.expand(self.sizes()) / self.numel()
 
 - name: median(Tensor self)
-  self: select_backward_scalar(grad, self, result)
+  self: select_equals_backward(grad, self, result)
 
+# This is in theory incorrect in the following case:
+#   sorted list: [..., a, b, b, ..., b, b, c, ...] with median = b and the value
+#                            |                     at middle position of the
+#                            |                     list between two `b`s. E.g.,
+#                            |
+#                            ^the middle position
+# The gradient exists and is essentially 0 in this case.
+#
+# In case where the middle position is at the boundary of `b` range, e.g.,
+#   sorted list: [..., a, b, b, ..., b, b, c, ...]
+#                                       |
+#                                       ^the middle position
+# The backward implementation is correct in the sense that it returns the
+# subgradient on one side.
 - name: median(Tensor self, int64_t dim, bool keepdim)
-  self: select_backward(grad, dim, indices, self.sizes(), keepdim)
+  self: index_select_backward(grad, dim, indices, self.sizes(), keepdim)
 
 - name: min(Tensor self, int64_t dim, bool keepdim)
-  self: select_backward(grad, dim, min_indices, self.sizes(), keepdim)
+  self: index_select_backward(grad, dim, min_indices, self.sizes(), keepdim)
 
 - name: min(Tensor self)
-  self: select_backward_scalar(grad, self, result)
+  self: select_equals_backward(grad, self, result)
 
 - name: min(Tensor self, Tensor other)
   self: grad.clone().masked_fill_(self >= other, 0)
@@ -443,7 +457,7 @@
   mat2: mm_mat2_backward(grad, self, mat2.sizes(), mat2.strides(), 1)
 
 - name: mode(Tensor self, int64_t dim, bool keepdim)
-  self: select_backward(grad, dim, indices, self.sizes(), keepdim)
+  self: index_select_backward(grad, dim, indices, self.sizes(), keepdim)
 
 - name: mul(Tensor self, Scalar other)
   self: grad * other
@@ -561,6 +575,13 @@
 - name: repeat(Tensor self, IntList repeats)
   self: repeat_backward(grad, self.dim(), repeats)
 
+# DO NOT define a backward for reshape!
+# reshape is special in that it sometimes returns a view, and somtimes not.
+# Defining a backward will make codegen spit out the forward call as
+#     as_variable(baseType->reshape(self)),
+# making it impossible (hard) to detect when it is actually a view.
+# - name: reshape(Tensor self, IntList shape)
+
 - name: RoiPooling2d_forward(Tensor input, Tensor rois, int64_t pooledHeight, int64_t pooledWidth, double spatialScale)
   input: RoiPooling2d_backward(input, rois, pooledHeight, pooledWidth, spatialScale, grad, result1)
 
@@ -581,6 +602,9 @@
   self: grad
   src: grad.gather(dim, index)
 
+- name: select(Tensor self, int64_t dim, int64_t index)
+  self: slice_backward(grad.unsqueeze(dim), self.sizes(), dim, index, index + 1, 1)
+
 - name: sigmoid(Tensor self)
   self: _sigmoid_backward(grad, result)
 
@@ -593,11 +617,14 @@
 - name: sinh(Tensor self)
   self: grad * self.cosh()
 
+- name: slice(Tensor self, int64_t dim, int64_t start, int64_t end, int64_t step)
+  self: slice_backward(grad, self.sizes(), dim, start, end, step)
+
 - name: slogdet(Tensor self)
   self: slogdet_backward(grads, self, result0, result1)
 
 - name: sort(Tensor self, int64_t dim, bool descending)
-  self: select_backward(grad, dim, indices, self.sizes(), true)
+  self: index_select_backward(grad, dim, indices, self.sizes(), true)
 
 - name: split(Tensor self, int64_t split_size, int64_t dim)
   self: split_backward(grads, split_size, dim, self.sizes(), self.type())
@@ -612,6 +639,12 @@
   self: unsqueeze_to(grad, self.sizes());
 
 - name: squeeze(Tensor self, int64_t dim)
+  self: unsqueeze_to(grad, dim, self.sizes())
+
+- name: squeeze_(Tensor self)
+  self: unsqueeze_to(grad, self.sizes());
+
+- name: squeeze_(Tensor self, int64_t dim)
   self: unsqueeze_to(grad, dim, self.sizes())
 
 - name: std(Tensor self, bool unbiased)
@@ -659,12 +692,15 @@
   self: _tanh_backward(grad, result)
 
 - name: topk(Tensor self, int64_t k, int64_t dim, bool largest, bool sorted)
-  self: select_backward(grad, dim, indices, self.sizes(), true)
+  self: index_select_backward(grad, dim, indices, self.sizes(), true)
 
 - name: trace(Tensor self)
   self: trace_backward(grad, self.sizes())
 
 - name: transpose(Tensor self, int64_t dim0, int64_t dim1)
+  self: grad.transpose(dim0, dim1)
+
+- name: transpose_(Tensor self, int64_t dim0, int64_t dim1)
   self: grad.transpose(dim0, dim1)
 
 - name: tril(Tensor self, int64_t diagonal)
@@ -689,9 +725,12 @@
   self: not_implemented("_unique")
 
 - name: _unsafe_view(Tensor self, IntList size)
-  self: grad.contiguous().view(self.sizes())
+  self: grad.reshape(self.sizes())
 
 - name: unsqueeze(Tensor self, int64_t dim)
+  self: grad.squeeze(dim)
+
+- name: unsqueeze_(Tensor self, int64_t dim)
   self: grad.squeeze(dim)
 
 - name: var(Tensor self, bool unbiased)
@@ -701,7 +740,7 @@
   self: var_backward(grad, self, dim, unbiased, keepdim)
 
 - name: view(Tensor self, IntList size)
-  self: grad.contiguous().view(self.sizes())
+  self: grad.reshape(self.sizes())
 
 - name: _s_where(Tensor condition, Tensor self, Tensor other)
   self: where(condition, grad, zeros_like(grad))
