disable hip op generation in cmake

--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -264,12 +264,12 @@ if(USE_ROCM)
   ENDIF()
   hip_add_library(caffe2_hip ${Caffe2_HIP_SRCS})
 
-  add_custom_command(TARGET caffe2
-          PRE_BUILD
-          COMMAND ${PYCMD} ${CMAKE_CURRENT_SOURCE_DIR}/../tools/amd_build/build_caffe2_amd.py
-          WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../tools/amd_build/
-          COMMENT "HIP OPERATOR GENERATION!!")
-  # Since PyTorch files contain HIP headers, these flags are required for the necessary definitions to be added.
+  #add_custom_command(TARGET caffe2
+  #        PRE_BUILD
+  #        COMMAND ${PYCMD} ${CMAKE_CURRENT_SOURCE_DIR}/../tools/amd_build/build_caffe2_amd.py
+  #        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../tools/amd_build/
+  #        COMMENT "HIP OPERATOR GENERATION!!")
+  ## Since PyTorch files contain HIP headers, these flags are required for the necessary definitions to be added.
   set_target_properties(caffe2_hip PROPERTIES COMPILE_FLAGS ${HIP_HIPCC_FLAGS})
   target_link_libraries(caffe2_hip PUBLIC caffe2)
   target_link_libraries(caffe2_hip PUBLIC ${Caffe2_HIP_DEPENDENCY_LIBS})
