Introduce libtorch to setup.py build
setup.py now compiles libtorch.so via CMake, and _C.so takes a
dependency on libtorch.so.  Most cpp files that were previously built
directly into _C.so have been removed from _C.so and added to
libtorch.so.

--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -53,6 +53,11 @@ if(BUILD_ATEN)
   ENDIF(USE_ROCM)
 endif()
 
+# ---[ Torch build
+if(BUILD_TORCH)
+  add_subdirectory(../torch torch)
+endif()
+
 # ---[ Caffe2 build
 if(BUILD_CAFFE2)
   # Note: the folders that are being commented out have not been properly
