--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -978,6 +978,12 @@
 - name: thnn_conv_dilated3d_backward(Tensor grad_output, Tensor self, Tensor weight, IntList kernel_size, IntList stride, IntList padding, IntList dilation, Tensor columns, Tensor ones, std::array<bool,3> output_mask)
   grad_output, self, weight: _convolution_double_backward(grads[0], grads[1], grads[2], grad_output, weight, self, stride, padding, dilation, false, {{0, 0, 0}}, 1, false, false, false, grad_input_mask)
 
+- name: thnn_grid_sampler_bilinear2d_forward(Tensor self, Tensor grid, int64_t padding_mode)
+  self, grid: thnn_grid_sampler_bilinear2d_backward(grad, self, grid, padding_mode)
+
+- name: thnn_grid_sampler_bilinear3d_forward(Tensor self, Tensor grid, int64_t padding_mode)
+  self, grid: thnn_grid_sampler_bilinear3d_backward(grad, self, grid, padding_mode)
+
 # NN double backwards support
 
 - name: adaptive_avg_pool2d_backward(Tensor grad_output, Tensor self)
