--- a/aten/src/THC/THCGeneral.h.in
+++ b/aten/src/THC/THCGeneral.h.in
@@ -45,7 +45,10 @@
 #endif
 
 struct THCRNGState;  /* Random number generator state. */
-typedef struct THCStream THCStream;
+namespace at {
+  struct CUDAStreamInternals;
+}
+typedef at::CUDAStreamInternals THCStream;
 typedef struct THCState THCState;
 
 typedef struct _THCDeviceAllocator {
@@ -96,8 +99,6 @@ struct THCState {
   /* Index of the current selected sparse handle. The actual sparse handle used
      depends on the current device. */
   THCThreadLocal/*<int>*/ currentPerDeviceSparseHandle;
-  /* Array of thread locals containing the current stream for each device */
-  THCThreadLocal* currentStreams;
 
   /* Table of enabled peer-to-peer access between directed pairs of GPUs.
      If i accessing allocs on j is enabled, p2pAccess[i][j] is 1; 0 otherwise. */
@@ -157,8 +158,8 @@ THC_API int THCState_getNumDevices(THCState* state);
 /* Stream API */
 THC_API cudaStream_t THCState_getCurrentStreamOnDevice(THCState *state, int device);
 THC_API cudaStream_t THCState_getCurrentStream(THCState *state);
-THC_API struct THCStream* THCState_getStream(THCState *state);
-THC_API void THCState_setStream(THCState *state, struct THCStream* stream);
+THC_API THCStream* THCState_getStream(THCState *state);
+THC_API void THCState_setStream(THCState *state, THCStream* stream);
 
 THC_API void THCState_reserveBlasHandles(THCState* state, int numHandles);
 THC_API int THCState_getNumBlasHandles(THCState* state);
