--- a/aten/src/ATen/test/CMakeLists.txt
+++ b/aten/src/ATen/test/CMakeLists.txt
@@ -23,7 +23,8 @@ list(APPEND ATen_CPU_TEST_SRCS
 list(APPEND ATen_CUDA_TEST_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/integer_divider_test.cu
   ${CMAKE_CURRENT_SOURCE_DIR}/cuda_rng_test.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/apply_test.cpp)
+  ${CMAKE_CURRENT_SOURCE_DIR}/apply_test.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/stream_test.cpp)
 if (CUDNN_FOUND)
   list(APPEND ATen_CUDA_TEST_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/cudnn_test.cpp)
