--- a/.gitmodules
+++ b/.gitmodules
@@ -24,7 +24,7 @@
 	url = https://github.com/google/benchmark.git
 [submodule "third_party/protobuf"]
 	path = third_party/protobuf
-	url = https://github.com/bddppq/protobuf.git
+	url = https://github.com/google/protobuf.git
 [submodule "third_party/ios-cmake"]
 	path = third_party/ios-cmake
 	url = https://github.com/Yangqing/ios-cmake.git
