Add derivative for batch matrix inverse.

--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -341,6 +341,9 @@
 - name: inverse(Tensor self)
   self: -at::mm(output.t(), at::mm(grad, output.t()))
 
+- name: binverse(Tensor self)
+  self: -at::bmm(output, at::bmm(grad, output))
+
 - name: kthvalue(Tensor self, int64_t k, int64_t dim, bool keepdim)
   self: index_select_backward(grad, dim, indices, self.sizes(), keepdim)
 
