--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1446,7 +1446,7 @@
     CUDA: flip_cuda
 
 # default IntList value {0,1} should not add space after comma, since native_parse.py uses ', ' to split args
-- func: rot90(Tensor self, int64_t k=1, IntList dims={0,1}) -> Tensor
+- func: rot90(Tensor self, int64_t k=1, IntList dims={}) -> Tensor
 
 - func: _trilinear(Tensor i1, Tensor i2, Tensor i3, IntList expand1, IntList expand2, IntList expand3, IntList sumdim, int64_t unroll_dim=1) -> Tensor
   variants: function
