Revert "Add asymptotes for activation images, fixes #9130"
This reverts commit 9b8c49afcf2481722b77356e5a34b103c7533209.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,7 +14,7 @@ help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 figures:
-	@$(PYCMD) $(SOURCEDIR)/scripts/build_activation_images.py
+	@$(PYCMD) source/scripts/build_activation_images.py
 
 docset: html
 	doc2dash --name $(SPHINXPROJ) --icon $(SOURCEDIR)/_static/img/pytorch-logo-flame.png --enable-js --online-redirect-url http://pytorch.org/docs/ --force $(BUILDDIR)/html/
@@ -33,5 +33,3 @@ docset: html
 clean:
 	@echo "Removing everything under 'build'.."
 	@rm -r $(BUILDDIR)/html/ $(BUILDDIR)/doctrees
-	@echo "Removing generated activation images.."
-	@rm -r $(SOURCEDIR)/scripts/activation_images
