--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1301,6 +1301,18 @@
     CPU: flip_cpu
     CUDA: flip_cuda
 
+- func: inverse(Tensor self) -> Tensor
+  variants: function, method
+  dispatch:
+    CPU: inverse_cpu
+    CUDA: inverse_cuda
+
+- func: inverse_out(Tensor result, Tensor self) -> Tensor
+  variants: function
+  dispatch:
+    CPU: inverse_out_cpu
+    CUDA: inverse_out_cuda
+
 - func: _trilinear(Tensor i1, Tensor i2, Tensor i3, IntList expand1, IntList expand2, IntList expand3, IntList sumdim, int64_t unroll_dim=1) -> Tensor
   variants: function
 
