--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1894,3 +1894,9 @@
 
 - func: meshgrid(TensorList tensors) -> TensorList
   variants: function
+
+- func: cartesian_prod(TensorList tensors) -> TensorList
+  variants: function
+
+- func: combinations(Tensor tensor, int64_t r=2, bool with_replacement=false) -> TensorList
+  variants: function
