The file SoftMaxCommon.cuh no longer exists. Fixing the replacement in SoftMax.cu to correctly set max_active_blocks

--- a/tools/amd_build/disabled_features.yaml
+++ b/tools/amd_build/disabled_features.yaml
@@ -24,15 +24,9 @@
         }
       },
       {
-        "path": "aten/src/THCUNN/SoftMaxCommon.cuh",
-        "functions": {
-          "cudaOccupancyMaxActiveBlocksPerMultiprocessor": "16"
-        }
-      },
-      {
         "path": "aten/src/ATen/native/cuda/SoftMax.cu",
         "functions": {
-          "cudaOccupancyMaxActiveBlocksPerMultiprocessor": "16"
+          "cudaOccupancyMaxActiveBlocksPerMultiprocessor": "max_active_blocks = 16;"
         }
       },
       {
