DO NOT REVIEW variant with torch_cuda_libraries

--- a/torch/CMakeLists.txt
+++ b/torch/CMakeLists.txt
@@ -270,7 +270,7 @@ if(USE_CUDA)
   if(MSVC OR APPLE)
     target_link_libraries(torch caffe2_gpu_library ${TORCH_CUDA_LIBRARIES})
   else()
-    target_link_libraries(torch caffe2_gpu_library ${CUDA_LIBRARIES})
+    target_link_libraries(torch caffe2_gpu_library ${TORCH_CUDA_LIBRARIES})
   endif()
   target_compile_definitions(torch PRIVATE USE_CUDA)
 endif()
