Add multivariate log-gamma (mvlgamma) 1. Add tests in test_cuda, test_torch 2. Add doc strings

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -940,6 +940,11 @@
 - func: mv_out(Tensor result, Tensor self, Tensor vec) -> Tensor
   variants: function
 
+- func: mvlgamma(Tensor self, int64_t p) -> Tensor
+
+- func: mvlgamma_(Tensor self, int64_t p) -> Tensor
+  variants: method
+
 - func: narrow(Tensor self, int64_t dim, int64_t start, int64_t length) -> Tensor
 
 - func: ones(IntList size, TensorOptions options={}) -> Tensor
