Implement reshape_as
1. Added tests
2. Added doc string
3. Remove view_as redundant definition from tensor.py

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1096,6 +1096,9 @@
 
 - func: reshape(Tensor self, IntList shape) -> Tensor
 
+- func: reshape_as(Tensor self, Tensor other) -> Tensor
+  variants: method
+
 - func: RoiPooling2d_forward(Tensor input, Tensor rois, int64_t pooledHeight, int64_t pooledWidth, double spatialScale) -> (Tensor, Tensor)
   variants: function
   dispatch:
