Try to enable this branch maybe
Signed-off-by: Edward Z. Yang <ezyang@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
           username: circleci
           password: $CIRCLECI_IAM_PASSWORD
     resource_class: large
+    branches:
+      only:
+        - circleci
     steps:
     - run:
         name: Hello World
