--- a/aten/CMakeLists.txt
+++ b/aten/CMakeLists.txt
@@ -15,6 +15,9 @@ else()
       USE_CUDNN "Use cuDNN" ON
       "USE_CUDA" OFF)
   option(ATEN_NO_TEST "Do not build ATen test binaries" OFF)
+  cmake_dependent_option(
+      USE_MIOPEN "Use MIOpen" ON
+      "USE_ROCM" OFF)
 
   # Flag for shared dependencies
   set(BUILD_ATEN ON)
