Replace hcRNG with rocRAND.
hcRNG is not supported any longer, rocRAND is the library replacing it.

This requires us to disable one function, add some include directories
to setup.py and add an include to THCTensorRandom if we are in the ROCm
context.

--- a/tools/amd_build/disabled_features.yaml
+++ b/tools/amd_build/disabled_features.yaml
@@ -92,6 +92,31 @@
         }
       },
       {
+        "path": "aten/src/THC/THCTensorRandom.cu",
+        "s_constants": {
+          "struct curandStateMtgp32*": "curandStateMtgp32*"
+        }
+      },
+      {
+        "path": "aten/src/THC/THCTensorRandom.h",
+        "s_constants": {
+          "struct curandStateMtgp32*": "curandStateMtgp32*"
+        }
+      },
+      {
+        "path": "aten/src/THCUNN/generic/RReLU.cu",
+        "s_constants": {
+          "struct curandStateMtgp32*": "curandStateMtgp32*"
+        }
+      },
+      {
+        "path": "aten/src/THC/THCGenerator.hpp",
+        "s_constants": {
+          "struct curandStateMtgp32*": "curandStateMtgp32*",
+          "struct mtgp32_kernel_params": "mtgp32_kernel_params"
+        }
+      },
+      {
         "path": "aten/src/ATen/native/cuda/CuFFTUtils.h",
         "s_constants": {
           "#include <cufft.h>": "",
@@ -199,6 +224,13 @@
       "path": "aten/src/THC/generic/THCTensor.cu",
       "functions": [
         "THCTensor_(getTextureObject)"
+      ]
+    },
+    {
+      "path": "aten/src/THC/THCTensorRandom.cu",
+      "functions": [
+        "THCRandom_setRNGState",
+        "set_rngstate_kernel"
       ]
     }
   ]
