add broadcasting support for gather

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -1919,3 +1919,13 @@
 
 - func: meshgrid(TensorList tensors) -> TensorList
   variants: function
+
+- func: gather(Tensor self, int64_t dim, IndexTensor index) -> Tensor
+  variants:
+    - method
+    - function
+
+- func: gather_out(Tensor result, Tensor self, int64_t dim, IndexTensor index) -> Tensor
+  variants:
+    - method
+    - function
