Avoid building non-master, maybe
Signed-off-by: Edward Z. Yang <ezyang@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,3 +18,6 @@ workflows:
   linux-trusty-py3.6-gcc7:
     jobs:
       - linux-trusty-py3.6-gcc7-build
+          - filters:
+              branches:
+                only: circleci
