separately compile InternedStrings::InternedStrings() with -O0

--- a/torch/CMakeLists.txt
+++ b/torch/CMakeLists.txt
@@ -133,6 +133,7 @@ set(TORCH_SRCS
   ${TORCH_SRC_DIR}/csrc/jit/interned_strings.cpp
   ${TORCH_SRC_DIR}/csrc/jit/interpreter.cpp
   ${TORCH_SRC_DIR}/csrc/jit/register_prim_ops.cpp
+  ${TORCH_SRC_DIR}/csrc/jit/register_symbols.cpp
   ${TORCH_SRC_DIR}/csrc/jit/ir.cpp
   ${TORCH_SRC_DIR}/csrc/jit/operator.cpp
   ${TORCH_SRC_DIR}/csrc/jit/passes/batch_mm.cpp
@@ -228,6 +229,12 @@ else()
     -Wno-missing-braces
     )
 endif()
+
+# see the source file for explanation
+set_source_files_properties(
+  ${TORCH_SRC_DIR}/csrc/jit/register_symbols.cpp
+  PROPERTIES COMPILE_FLAGS -O0
+  )
 
 if (MSVC)
 elseif ($ENV{WERROR})
