--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -519,7 +519,7 @@
   self: zeros_like(self)
 
 - name: potrf(Tensor self, bool upper)
-  self: potrf_backward(grad, upper, output)
+  self: potrf_backward(grad, upper, self)
 
 - name: potri(Tensor self, bool upper)
   self: not_implemented("potri")
